--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 04 15:58:27 GMT 2026
-sdk.dir=/Users/ramtejadommati/Library/Android/sdk
+#Thu Dec 11 10:24:58 IST 2025
+sdk.dir=C\:\\Users\\MsgQ\\AppData\\Local\\Android\\Sdk
